# QecTransformer

./: README.md  main.py  requirements.txt  setup.cfg
code/: logical_rsur_d3_k1  logical_rsur_d7_k1  logical_steane_d5_k1  rsur_d11_k1_seed0  rsur_d13_k1_seed0  stabilizer_rsur_d7_k1  stabilizer_steane_d3_k1  stabilizer_steane_d5_k1
data/: net_r1.pt  net_r2.pt  net_r3_other_pos.pt  net_r4_wo_log.pt  net_r5_wo_log3.pt  net_r5_wo_log5.pt  net_r63.pt  net_r73.pt  results_r1.pt  results_r2.pt  results_r3.pt  results_r4.pt
src/: analytical.py  analytical_d5  color.py  loops.py  optimizer.py  utils.py
src/analytical/: analytical_d3  analytical_d5
src/code/: logical_rsur_d5_k1  logical_steane_d3_k1  rsur_d9_k1_seed0  stabilizer_rsur_d3_k1  stabilizer_rsur_d5_k1
src/data/: dataset.py
src/dem/: circuit_to_graph.py  dem_full.py
src/error_code/: decoding.py  error_code.py
src/nn/: qectransformer.py
src/nn/encoder/: embedding.py  encoder_test.py  trade.py
